[project]
name = "ripple"
version = "0.1.0"
description = "Data-incident triage agent for DataHub — reads lineage, drafts an impact report, and writes the incident back to the catalog."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Ripple contributors" }]
dependencies = [
    "acryl-datahub>=1.0.0",
    "anthropic>=0.40.0",       # narrative generation (swap for google-genai if you prefer Gemini)
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",            # pretty CLI output
    "fastapi>=0.110.0",        # web dashboard
    "uvicorn>=0.29.0",         # ASGI server for the dashboard
]

[project.scripts]
ripple = "ripple.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ripple"]
